--- a/css/main.css
+++ b/css/main.css
@@ -26,28 +26,20 @@ a{color: #444}
     background-position: 50% 50%;
     background-attachment: fixed;
     overflow: hidden;
-    min-height: 600px;
-	position: relative;
     width: 100%;
     height: 93vh;
+    min-height: 600px;
     color: #fff;
     text-shadow: 0 1px 2px rgba(0,0,0,0.6);
 }
 .overlay{
-	position: absolute;
-    left: 0;
-    top: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(93,101,107,0.7);
 }
 .hero{
-	position: relative;
     width: 100%;
     padding: 100px 0;
-    -webkit-transition: all .2s ease-out;
-    -moz-transition: all .2s ease-out;
-    transition: all .2s ease-out;
 }
 .intro h1{
 	font-family: 'BOOTLE',sans-serif;
@@ -68,6 +60,10 @@ a{color: #444}
     background: #555;
 }
 /******************/
-@media (max-width: 991px){
-	
+footer{
+	background-image: url(../img/fondo.jpg);
+	background-size: cover;
+    background-position: 50% 50%;
+    background-attachment: fixed;
+    color: #fff;
 }
