--- a/css/main.css
+++ b/css/main.css
@@ -17,11 +17,10 @@ body{
 a{color: #444}
 /**************/
 .navbar{
-	margin: 0px;
-	z-index: 10;
+	margin-bottom: 0px;
 }
-#intro{background-image: url(../img/fondo.jpg);}
 .intro{
+	background-image: url(../img/hero.jpg);
     background-size: cover;
     background-position: 50% 50%;
     background-attachment: fixed;
@@ -30,7 +29,6 @@ a{color: #444}
     height: 93vh;
     min-height: 600px;
     color: #fff;
-    text-shadow: 0 1px 2px rgba(0,0,0,0.6);
 }
 .overlay{
     width: 100%;
@@ -40,6 +38,8 @@ a{color: #444}
 .hero{
     width: 100%;
     padding: 100px 0;
+    position: absolute;
+    bottom: 0px;
 }
 .intro h1{
 	font-family: 'BOOTLE',sans-serif;
@@ -66,4 +66,22 @@ footer{
     background-position: 50% 50%;
     background-attachment: fixed;
     color: #fff;
+}
+.bg-footer{background-color: rgb(93,101,107);}
+.bg-footer i{margin-right: 3%;}
+
+footer h2{font-weight: bold;}
+footer a{
+	margin: 0 20px 0 0;
+    color: #fff;
+    display: inline-block;
+    font-size: 25px;
+    -webkit-transition: all .2s ease-out;
+    -moz-transition: all .2s ease-out;
+    transition: all .2s ease-out;
+    vertical-align: bottom;
+}
+footer a i{
+	vertical-align: bottom;
+    line-height: 38px
 }
