--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body{
 	height: 100%;
 }
 a{color: #444}
+.vh {height: 100vh;}
 /**************/
 .navbar{
 	margin-bottom: 0px;
@@ -22,11 +23,11 @@ a{color: #444}
 .intro{
 	background-image: url(../img/hero.jpg);
     background-size: cover;
-    background-position: 50% 50%;
+    background-position: 30% 50%;
     background-attachment: fixed;
     overflow: hidden;
     width: 100%;
-    height: 93vh;
+    height: 100vh;
     min-height: 600px;
     color: #fff;
 }
@@ -60,7 +61,7 @@ a{color: #444}
     background: #555;
 }
 /******************/
-footer{
+#final{
 	background-image: url(../img/fondo.jpg);
 	background-size: cover;
     background-position: 50% 50%;
@@ -70,8 +71,8 @@ footer{
 .bg-footer{background-color: rgb(93,101,107);}
 .bg-footer i{margin-right: 3%;}
 
-footer h2{font-weight: bold;}
-footer a{
+#final h2{font-weight: bold;}
+#final a{
 	margin: 0 20px 0 0;
     color: #fff;
     display: inline-block;
@@ -81,7 +82,7 @@ footer a{
     transition: all .2s ease-out;
     vertical-align: bottom;
 }
-footer a i{
+#final a i{
 	vertical-align: bottom;
     line-height: 38px
 }
